--- a/WarfaceLineups/client/src/Main.module.css
+++ b/WarfaceLineups/client/src/Main.module.css
@@ -1,9 +1,10 @@
 .main{
 
 }
-body{
+html, body{
     background-color: rgb(20, 20, 20);
     overflow-x: hidden;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
