--- a/WarfaceLineups/client/src/Main.module.css
+++ b/WarfaceLineups/client/src/Main.module.css
@@ -4,6 +4,7 @@
 html, body{
     background-color: rgb(20, 20, 20);
     overflow-x: hidden;
+    overflow-y: hidden;
     margin: 0;
     padding: 0;
     height: 100%;
