--- a/WarfaceLineups/client/src/Main.module.css
+++ b/WarfaceLineups/client/src/Main.module.css
@@ -9,3 +9,15 @@ html, body{
     padding: 0;
     height: 100%;
 }
+
+.spinnerLoading {
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
