--- a/WarfaceLineups/client/src/pages/styles/Start.module.css
+++ b/WarfaceLineups/client/src/pages/styles/Start.module.css
@@ -1,6 +1,6 @@
 .footer {
-    display: flex;
-    flex-direction: row;
+    /*display: flex;
+    flex-direction: row;*/
     position:fixed;
     bottom:0;
     left:0;
@@ -8,5 +8,4 @@
     height: 90px;
     background-color: #000000;
     align-items: center;
-    justify-content: center;
 }
